--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "fast-sort": "^3.4.1",
     "next": "14.2.14",
     "postcss": "8.4.47",
+    "prisma": "^5.21.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tailwindcss": "3.4.13",
-    "typescript": "5.6.2"
+    "typescript": "5.6.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "daisyui": "^4.12.12"
