--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "eslint-config-next": "14.2.14",
     "fast-sort": "^3.4.1",
     "next": "14.2.14",
+    "next-auth": "^4.24.10",
+    "next-cloudinary": "^6.16.0",
     "postcss": "8.4.47",
     "prisma": "^5.21.1",
     "react": "18.3.1",
