--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "preview-email": "email dev -p 3030"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.21.1",
+    "@react-email/components": "^0.0.25",
     "@types/node": "22.7.4",
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.0",
@@ -26,6 +28,8 @@
     "prisma": "^5.21.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-email": "^3.0.1",
+    "resend": "^4.0.1-alpha.0",
     "tailwindcss": "3.4.13",
     "typescript": "5.6.2",
     "zod": "^3.23.8"
