--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.14",
     "fast-sort": "^3.4.1",
+    "lodash": "^4.17.21",
     "next": "14.2.14",
     "next-auth": "^4.24.10",
     "next-cloudinary": "^6.16.0",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/lodash": "^4.17.13",
     "daisyui": "^4.12.12"
   }
 }
