--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.20",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.14",
     "fast-sort": "^3.4.1",
@@ -36,7 +36,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/lodash": "^4.17.13",
     "daisyui": "^4.12.12"
   }
